<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingLeft="9dp"
    android:paddingRight="9dp"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="3dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uhf_title_power"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uhf_title_dbm" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSetPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/uhf_btn_setpower"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="3dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_ip"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_ip"
                android:inputType="number"
                android:digits="0123456789."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_port"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_port"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>

        <Button
            android:id="@+id/btnSetHttp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/setting_http_save"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>

